--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
         "type": "iterm",
-        "source": "~/.config/fastfetch/nix.png"
+        "source": "~/.config/fastfetch/arch.png" // Assuming you have an Arch Linux logo image
     },
     "display": {
         "separator": " : "
@@ -14,22 +14,22 @@
         },
         {
             "type": "os",
-            "key": "   OS",
-            "keyColor": "red"
+            "key": "   OS",
+            "keyColor": "red" // You can change this to match the color scheme
         },
         {
             "type": "kernel",
-            "key": "   Kernel",
+            "key": "   Kernel",
             "keyColor": "red"
         },
         {
             "type": "packages",
-            "key": "   Packages",
+            "key": "  󰏖 Packages", // Change the packages icon
             "keyColor": "green"
         },
         {
             "type": "wm",
-            "key": "    WM",
+            "key": "   WM", // This is the Arch Linux icon
             "keyColor": "yellow"
         },
         {
@@ -48,50 +48,31 @@
         {
             "type": "cpu",
             "format": "{1}",
-            "key": "   CPU",
+            "key": "   CPU",
             "keyColor": "blue"
         },
         {
             "type": "gpu",
             "format": "{2}",
-            "key": "   GPU",
+            "key": "   GPU",
             "keyColor": "blue"
         },
         {
             "type": "gpu",
             "format": "{3}",
-            "key": "   GPU Driver",
+            "key": "   GPU Driver",
             "keyColor": "magenta"
         },
         {
             "type": "memory",
-            "key": "  󰍛 Memory",
+            "key": "  󰍛 Memory", // Change the memory icon
             "keyColor": "magenta"
         },
         {
             "type": "custom",
             "format": "└──────────────────────────────────────────┘"
         },
-        "break",
-       {
-            "type": "custom",
-            "format": "┌──────────────────────────────────────────┐"
-        },
-        {
-            "type": "uptime",
-            "key": "  祥 System Uptime",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "datetime",
-            "key": " __ Time",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "custom",
-            "format": "└──────────────────────────────────────────┘"
-        },
-        "break",
+       "break",
         {
             "type": "colors",
             "paddingLeft": 8,
