--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,10 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# reload config file (change file location to your the tmux.conf you want to use)
+
+bind r source-file ~/.config/tmux/tmux.conf
+
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D 
@@ -16,7 +20,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-set-option -g status-position top
+#set-option -g status-position top
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -31,30 +35,11 @@ bind -n S-Right next-window
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
-
-# theme
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "yes"
-
 #plugins
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
@@ -68,4 +53,44 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -h -c "#{pane_current_path}"
 bind % split-window -v -c "#{pane_current_path}"
+
+
+
+# DESIGN TWEAKS
+# don't do anything when a 'bell' rings
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# clock mode
+setw -g clock-mode-colour colour1
+
+# copy mode
+setw -g mode-style 'fg=#6e6a86 bg=#26233a bold'
+
+# pane borders
+set -g pane-border-style 'fg=#6e6a86'
+set -g pane-active-border-style 'fg=#9ccfd8'
+
+# statusbar
+set -g status-position top
+set -g status-justify left
+set -g status-style 'fg=#e0def4 bg=#191724'
+set -g status-left ' #P  '
+set -g status-right '#[fg=#e0def4] %Y-%m-%d %H:%M '
+set -g status-right-length 50
+set -g status-left-length 10
+
+setw -g window-status-current-style 'fg=#191724 bg=#9ccfd8 bold'
+setw -g window-status-current-format ' #I #W '
+
+setw -g window-status-style 'fg=#e0def4 bg=#191724 dim'
+setw -g window-status-format ' #I #[fg=#9ccfd8]#W #[fg=#6e6a86]#F '
+
+setw -g window-status-bell-style 'fg=#eb6f92 bg=#191724 bold'
+
+# messages
+set -g message-style 'fg=#e0def4 bg=#191724 bold'
 
