--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,7 +4,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 5;
+corner-radius = 0;
 rounded-corners-exclude = [
   #"window_type = 'toolbar'",
   #"class_g = 'eww-bar'",
@@ -163,7 +163,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -177,7 +177,7 @@ frame-opacity = 0.5;
 inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 1;
+active-opacity = 0.9;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -332,7 +332,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+#refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
